        * include/Rcpp/internal/r_coerce.h: support for String
        * include/Rcpp/sugar/functions/sapply.h: debugging
        * include/Rcpp/traits/wrap_type_traits.h: support for String
        * include/Rcpp/traits/r_type_traits.h: support for String
        * unitTests/cpp/String.cpp : unit tests for String
        * unitTests/runit.String.R: unit test for String

2012-12-01  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/RcppCommon.h: Applied patch by Yan Zhou to add support
	for clang++ with libc++, and Intel's icpc when std=c++11

2012-11-29 Romain Francois <romain@r-enthusiasts.com>

        * unitTests/runit.DataFrame.R: using sourceCpp
        * include/Rcpp/vector/Matrix.h: fix yet another const correctness issue

2012-11-27  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/Rcpp/iostream/Rostream.h: Check before deleting buf

2012-11-26  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION: Release 0.10.1
        * inst/NEWS.Rd: Release 0.10.1
        * inst/include/Rcpp/config.h: Release 0.10.1
        * debian/*: Similarly updated for new release to Debian

	* DESCRIPTION: Added paragraph about Rcpp attributes
	* debian/control: Idem

2012-11-26 Romain Francois <romain@r-enthusiasts.com>

        * include/Rcpp/Module.h: comment out the unused and unuseable
	converter overload.
        * include/Rcpp/sugar/functions/pmin.h: be consistent about how the
	pmin_op helper struct is defined (always a struct).
        * include/Rcpp/sugar/functions/pmax.h: same for pmax
        * include/Rcpp/stats/random/rbeta.h: fixed constructor issue
        * unitTests/runit.sugar.R: rework to use sourceCpp instead of inline
        * include/Rcpp/vector/Vector.h: added ctor to deal with
        SingleLogicalResult
        * include/Rcpp/vector/Matrix.h: another const correctness fix

2012-11-25  JJ Allaire <jj@rstudio.org>

        * R/Attributes.R: use echo = TRUE for sourceCpp R code chunks